Updated build.gradle to point to correct main class

--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ repositories {
 
 application {
     // Change this to your main class.
-    mainClassName = "duke.main.Duke"
+    mainClassName = "duke.main.Launcher"
 }
 
 run {
